☄️🗾 Checkpoint ./index.js:66400173/29 ./config.json:66400173/201 ./events/ready.js:66400173/31

--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
-    "token":"",
-	"log":"",
-    "sahip":"",
-    "giris-cikis":"",
-    "desteksunucusu": "https://discord.gg/",
+    "token":"MTIyNTAxMzA5OTk2MzIyNDA2NA.GaFHjt.aY1DovGueb-7hvJIDAfpjMzRC8xJJOb66R4FOg",
+	"log":"1251325288315621406",
+    "sahip":"715218831676669997",
+    "giris-cikis":"1251308726204498035",
+    "desteksunucusu": "https://discord.com/invite/2SaUatE7Dw",
     "bot-davet":"https://discord.com/oauth2/authorize",
-    "bot-adi":"Rimuru",
+    "bot-adi":"SeaDevils",
     "website":"https://oktaydev.com.tr",
     "mesajXp": 1,
     "sesXp":2,
