🍜💺 Checkpoint ./index.js:66400173/217 ./config.json:66400173/64

--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
     "desteksunucusu": "https://discord.com/invite/2SaUatE7Dw",
     "bot-davet":"https://discord.com/oauth2/authorize",
     "bot-adi":"SeaDevils",
-    "website":"https://oktaydev.com.tr",
+    "website":"Yakında",
     "mesajXp": 1,
     "sesXp":2,
     "levelXp": 99
